colors and href

--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
 html {
   scroll-snap-type: y mandatory;
   --accent-color: #e3c078;
+  --accent-hover: #af955f;
   --text-color: #5e5e5e;
+
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
 }
 
 section {
@@ -25,13 +33,13 @@ input[type="text"],
 input[type="email"],
 textarea {
   border-radius: 0;
-  border: 1px solid #5e5e5e;
+  border: 1px solid var(--accent-color);
   padding: 0.4rem;
 }
 
 input[type="checkbox"],
 input[type="radio"] {
-  accent-color: #5e5e5e;
+  accent-color: var(--accent-color);
 }
 
 /*
@@ -77,7 +85,7 @@ h2 {
   font-weight: 100;
   font-family: "parisienne", cursive;
   line-height: 1;
-  margin: 0;
+  margin-bottom: 2rem;
 }
 
 header {
@@ -85,7 +93,7 @@ header {
   top: 0;
   z-index: 1000;
   background: white;
-  color: #5e5e5e;
+  color: var(--text-color);
 
   .logo {
     font-family: "parisienne", cursive;
@@ -114,7 +122,7 @@ header {
   }
 
   .rsvpButton {
-    background: #5e5e5e;
+    background: var(--accent-color);
     border: none;
     color: white;
     padding: 0.6rem;
@@ -160,11 +168,11 @@ header {
     font-size: 1.2em;
   }
 
-  .rsvpButton {
+  .rsvpFooterButton {
     width: fit-content;
     margin-top: 1rem;
     border: none;
-    background: #5e5e5e;
+    background: var(--accent-color);
     color: white;
     padding: 0.6rem;
     cursor: pointer;
@@ -205,7 +213,7 @@ header {
   form {
     display: flex;
     flex-direction: column;
-    border: 1px solid #5e5e5e;
+    border: 1px solid var(--accent-color);
     padding: 4rem;
 
     #name {
@@ -238,7 +246,7 @@ header {
     }
 
     #submitButton {
-      background: #868686;
+      background: var(--accent-color);
       color: white;
       border: none;
       padding: 0.7rem;
@@ -248,7 +256,7 @@ header {
     }
 
     #submitButton:hover {
-      background: #656565;
+      background: var(--accent-hover);
     }
   }
 }
