--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ section {
   align-items: center;
   text-align: center;
   justify-content: center;
+  min-height: 100vh;
 
   opacity: 1;
   transition: opacity 2s;
@@ -61,7 +62,6 @@ header {
 
 section#hero {
   background-image: url("public/hero.webp");
-  min-height: 100vh;
 
   background-attachment: fixed;
   background-position: center;
@@ -77,7 +77,7 @@ section#hero {
 
   .footer {
     width: 100%;
-    bottom: 0;
+    bottom: 4rem;
     position: absolute;
   }
 
@@ -88,7 +88,6 @@ section#hero {
 
   .rsvpFooterButton {
     width: fit-content;
-    margin-top: 1rem;
     border: none;
     background: var(--accent-color);
     color: white;
