massa mer grejer

--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 section {
   display: flex;
   flex-direction: column;
-  align-items: center;
   text-align: center;
-  justify-content: center;
-  min-height: 100vh;
+  align-items: center;
+  padding-top: 15vh;
+  min-height: 170vh;
 
   opacity: 1;
   transition: opacity 2s;
@@ -63,6 +63,8 @@ header {
 section#hero {
   background-image: url("public/hero.webp");
 
+  padding-top: 30vh;
+
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -96,13 +98,38 @@ section#hero {
   }
 }
 
+section#welcome {
+  min-height: 100vh;
+  padding-bottom: 10rem;
+
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 80vw;
+    justify-content: space-evenly;
+    gap: 2rem;
+
+    margin-top: 2rem;
+
+    img {
+      width: 300px;
+      height: 420px;
+      object-fit: cover;
+    }
+  }
+}
+
 section#info {
   .text {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    max-width: 20rem;
+    max-width: min(80vw, 30rem);
     text-align: justify;
+  }
+
+  h3 {
+    font-weight: 100;
   }
 
   .toastmadame {
@@ -110,14 +137,31 @@ section#info {
     flex-direction: column;
     align-items: center;
     gap: 4rem;
+    line-height: 1.6;
 
     img {
       width: 20rem;
     }
   }
+
+  @media only screen and (min-width: 800px) {
+    .toastmadame {
+      flex-direction: row;
+      gap: 6rem;
+
+      img {
+        width: 25rem;
+      }
+
+      h3 {
+        font-size: 2rem;
+        text-align: left;
+      }
+    }
+  }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
   section#schedule {
     .scheduleList {
       max-width: 30rem;
@@ -126,6 +170,7 @@ section#info {
 }
 
 section#schedule {
+  min-height: 100vh;
   .scheduleList {
     max-width: 30rem;
     width: 100%;
@@ -174,16 +219,17 @@ section#schedule {
 section#location {
   color: white;
 
-  background-image: url("public/sunna.jpeg");
+  background-image: url("public/place.jpeg");
 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: top;
 
   .map {
     margin-bottom: 1rem;
+    width: 300px;
+    height: 300px;
   }
 
   .text {
@@ -192,5 +238,18 @@ section#location {
     display: flex;
     flex-direction: column;
     line-height: 1.8;
+    font-weight: 800;
+  }
+
+  @media only screen and (min-width: 800px) {
+    .placeContainer {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+
+    .map {
+      width: 700px;
+      height: 400px;
+    }
   }
 }
