--- a/index.css
+++ b/index.css
@@ -219,7 +219,7 @@ section#schedule {
 section#location {
   color: white;
 
-  background-image: url("public/place.jpeg");
+  background-image: url("public/sunna.jpeg");
 
   background-attachment: fixed;
   background-position: center;
